--- a/assets/css/mypitchme.css
+++ b/assets/css/mypitchme.css
@@ -7,6 +7,7 @@
     margin: 0 0 20px 0;
     color: #eee8d5;
     font-family: "League Gothic", Impact, sans-serif;
+    font-size: 1.0em;
     line-height: 0.5em;
     letter-spacing: 0.02em;
     text-transform: uppercase;
