--- a/assets/css/myPitchme.css
+++ b/assets/css/myPitchme.css
@@ -1,11 +1,10 @@
 .reveal h1,
-.reveal h2 {
-    color: #ff0000;
-    font-size: 1.2em;
+.reveal h2,
+.reveal h3 {
+    font-size: 1.0em;
 }
 .reveal ul,
 .reveal ol {
-    color: #eee8d5;
-    font-size: 0.8em;
+    font-size: 0.7em;
 }
 
