--- a/assets/css/myPitchme.css
+++ b/assets/css/myPitchme.css
@@ -7,7 +7,8 @@
     text-align: left;
     font-size: 1.0em;
 }
-.reveal body {
+.reveal body,
+.reveal p {
     font-size: 0.8em;
     text-align: justify;
 }
